Fixed stretched morphing

--- a/frontend/styles/components/_header.scss
+++ b/frontend/styles/components/_header.scss
@@ -275,7 +275,7 @@
     #morph { 
 
       width: 100%; 
-      height: 100%; 
+      height: 100vh; 
       top: 0; 
       left: 0; 
       position: absolute; 
